fixed license - now for each file separately