@@ -169,7 +169,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
-                         <configuration>
+                    <configuration>
                         <!--forkedProcessExitTimeoutInSeconds>3600</forkedProcessExitTimeoutInSeconds>
                         <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds-->
                         <argLine>${commandLineArg.ChooseVM} ${commandLineArg.NativeProvider}</argLine>
@@ -192,9 +192,6 @@
                         <release>${compile.target}</release>
                         <encoding>${project.build.sourceEncoding}</encoding>
                         <showDeprecation>true</showDeprecation>
-                        <compilerArgs>
-                            <arg>--enable-preview</arg>        
-                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -242,6 +239,13 @@
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
                     <version>4.3</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.mycila</groupId>
+                            <artifactId>license-maven-plugin-git</artifactId>
+                            <version>4.3</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -324,40 +328,16 @@
                     <failIfMissing>true</failIfMissing>
                     <aggregate>true</aggregate>
                     <strictCheck>true</strictCheck>
-                    <properties>
-                        <copyright-range>${project.inceptionYear}-2023</copyright-range>
-                    </properties>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>check-java-headers</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
+                    <licenseSets>
+                        <licenseSet>
                             <header>header-template-java.txt</header>
-                            <mapping>
-                                <java>SLASHSTAR_STYLE</java>
-                            </mapping>
                             <includes>
                                 <include>**/*.java</include>
                             </includes>
                             <excludes />
-
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>check-c-headers-and-sources</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
+                        </licenseSet>
+                        <licenseSet>
                             <header>header-template-java.txt</header>
-                            <mapping>
-                                <c>SLASHSTAR_STYLE</c>
-                            </mapping>
                             <includes>
                                 <include>**/*.c</include>
                                 <include>**/*.h</include>
@@ -379,9 +359,10 @@
                                 <exclude>de.ibapl.jnhw.syscall.linux/src/main/linux-source/**</exclude>
 
                             </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
+
+                        </licenseSet>
+                    </licenseSets>
+                </configuration>
             </plugin>
         </plugins>
     </build>
